<resources>
    <string name="app_name">Ratatouille</string>
    <string name="slogan1">Restaurant chef in</string>
    <string name="slogan2">your house kitchen</string>

    <string name="log_in">Log in</string>

    <string name="user_name">username</string>
    <string name="password">password</string>
    <string name="forgot_password">forgot password?</string>

    <string name="name">name</string>
    <string name="last_name">last name</string>
    <string name="email">email</string>

    <string name="next">next</string>
    <string name="specialities">specialities</string>
    <string name="featured_plates">featured plates</string>
    <string name="location">location</string>
    <string name="register">Register</string>

    <string name="as_client">As Client</string>
    <string name="as_chef">As Chef</string>

    <string name="find_chefs">FIND CHEFS</string>

    <string name="welcome">WELCOME</string>
    <string name="foodplates">Looking for someone to cook...</string>


    <string name="title_activity_maps">Map</string>
    <string name="disponible">Disponible</string>
    <string name="solicitudes">Solicitudes</string>
    <string-array name="specialities">
        <item>breakfast</item>
        <item>lunch</item>
        <item>dinner</item>
        <item>vegetarian</item>
        <item>protein</item>
        <item>dessert</item>
        <item>colombian</item>
        <item>foreign</item>
        <item>cocktails</item>
    </string-array>
    <string name="title_activity_map">Map</string>
    <string name="access_token_OSM">pk.eyJ1Ijoia3N0cm85NiIsImEiOiJjazM1eGJiNzAxa3VtM2NwYW92amx2OWc1In0.DdKJ-6EpJc7N4kXTiBJMjA</string>
    <string name="user_location_permission_explanation">Para mejor funcionalidad por favor acepte los permisos de localización.</string>
    <string name="user_location_permission_not_granted">No se han aceptado los permisos de localización.</string>
</resources>
