<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClientChef.LogIn">

    <Button
        android:id="@+id/btn_loginN"
        style="@style/btn_txt_black_background_white"
        android:text="@string/log_in"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_sub_forgot" />

    <TextView
        android:id="@+id/txt_sub_username"
        android:layout_width="161dp"
        android:layout_height="34dp"
        android:layout_marginTop="196dp"
        android:background="@null"
        android:ems="10"
        android:fontFamily="@font/raleway"
        android:inputType="textPersonName"
        android:text="@string/user_name"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_sub_forgot2" />

    <EditText
        android:id="@+id/frm_email"
        android:layout_width="294dp"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_white"
        android:enabled="true"
        android:lineSpacingExtra="8sp"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_sub_username" />

    <TextView
        android:id="@+id/txt_sub_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:ems="10"
        android:fontFamily="@font/raleway_extrabold"
        android:inputType="textPersonName"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frm_password" />

    <TextView
        android:id="@+id/txt_sub_password"
        android:layout_width="161dp"
        android:layout_height="33dp"
        android:layout_marginTop="12dp"
        android:background="@null"
        android:ems="10"
        android:fontFamily="@font/raleway"
        android:inputType="textPersonName"
        android:text="@string/password"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frm_email" />

    <TextView
        android:id="@+id/txt_sub_forgot2"
        android:layout_width="206dp"
        android:layout_height="39dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="164dp"
        android:background="@null"
        android:ems="10"
        android:fontFamily="@font/raleway_extrabold"
        android:inputType="textPersonName"
        android:text="@string/app_name"
        android:textAlignment="viewStart"
        android:textColor="#E2000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="602dp"
        android:layout_height="435dp"
        android:layout_marginTop="135dp"
        android:contentDescription="fotico"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frm_password"
        app:srcCompat="@drawable/img_landing" />


    <EditText
        android:id="@+id/frm_password"
        android:layout_width="294dp"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/btn_white"
        android:lineSpacingExtra="8sp"
        android:textAlignment="center"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_sub_password" />


</androidx.constraintlayout.widget.ConstraintLayout>