<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <TextView
        android:id="@+id/txt_sub_username2"
        android:layout_width="162dp"
        android:layout_height="56dp"
        android:layout_marginTop="51dp"
        android:background="@null"
        android:ems="10"
        android:fontFamily="@font/raleway_extrabold"
        android:inputType="textPersonName"
        android:text="@string/register"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_sub_ratregister" />

    <TextView
        android:id="@+id/txt_sub_ratregister"
        android:layout_width="206dp"
        android:layout_height="39dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="164dp"
        android:background="@null"
        android:ems="10"
        android:fontFamily="@font/raleway_extrabold"
        android:inputType="textPersonName"
        android:text="@string/app_name"
        android:textAlignment="viewStart"
        android:textColor="#E2000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="141dp"
        android:layout_height="128dp"
        android:layout_marginStart="125dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="126dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/chef"
        android:clickable="true"/>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="141dp"
        android:clickable="true"
        android:layout_height="128dp"
        android:layout_marginStart="125dp"
        android:layout_marginTop="98dp"
        android:layout_marginEnd="126dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_sub_username2"
        app:srcCompat="@drawable/client" />

    <TextView
        android:id="@+id/textView3"
        style="@style/txtView_title1"
        android:text="@string/as_client"

        android:layout_width="124dp"
        android:layout_height="38dp"
        android:layout_marginStart="134dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="135dp"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView4"
        style="@style/txtView_title1"
        android:layout_width="124dp"
        android:layout_height="44dp"


        android:layout_marginStart="134dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="135dp"
        android:text="@string/as_chef"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />
</androidx.constraintlayout.widget.ConstraintLayout>