<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClientRegister">

    <Button

        style="@style/btn_txt_white_background_grey"

        android:id="@+id/btn_register2"
        android:text="@string/register"

        android:layout_marginStart="89dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="89dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"

        />

    <EditText
        android:id="@+id/textView6"
        android:layout_width="294dp"
        android:layout_height="51dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="63dp"
        android:background="@drawable/btn_white"
        android:enabled="true"
        android:lineSpacingExtra="8sp"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_sub_username5" />

    <TextView
        style="@style/txtView_title1"
        android:id="@+id/txt_sub_username3"
        android:text="@string/name"

        android:layout_width="161dp"
        android:layout_height="34dp"
        android:layout_marginTop="121dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.155"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_sub_forgot3" />

    <EditText
        android:id="@+id/textView5"
        android:layout_width="294dp"
        android:layout_height="51dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="63dp"
        android:background="@drawable/btn_white"
        android:enabled="true"
        android:lineSpacingExtra="8sp"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_sub_username3" />

    <TextView
        style="@style/txtView_title1"

        android:id="@+id/txt_sub_username5"
        android:text="@string/last_name"

        android:layout_width="161dp"
        android:layout_height="34dp"
        android:layout_marginTop="23dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.155"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        style="@style/txtView_title1"
        android:id="@+id/txt_sub_username4"
        android:text="@string/email"

        android:layout_width="161dp"
        android:layout_height="34dp"
        android:layout_marginTop="28dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.155"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/textView7"
        android:layout_width="294dp"
        android:layout_height="51dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/btn_white"
        android:enabled="true"
        android:lineSpacingExtra="8sp"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_sub_username4" />

    <TextView
        android:id="@+id/txt_sub_forgot3"
        android:layout_width="206dp"
        android:layout_height="39dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="164dp"
        android:background="@null"
        android:ems="10"
        android:fontFamily="@font/raleway_extrabold"
        android:inputType="textPersonName"
        android:text="@string/app_name"
        android:textAlignment="viewStart"
        android:textColor="#E2000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="147dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="148dp"
        android:alpha="0.25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:srcCompat="@drawable/client" />
</androidx.constraintlayout.widget.ConstraintLayout>