<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChefRegister">

    <Button
        android:id="@+id/btn_register4"

        style="@style/btn_txt_white_background_grey"

        android:layout_marginStart="81dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="58dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="147dp"
        android:layout_marginTop="32dp"
        android:alpha="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:srcCompat="@drawable/chef" />

    <EditText
        android:id="@+id/textView10"
        android:layout_width="294dp"
        android:layout_height="51dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="63dp"
        android:background="@drawable/btn_white"
        android:enabled="true"
        android:lineSpacingExtra="8sp"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_sub_username9" />

    <TextView
        android:id="@+id/txt_sub_username9"

        android:layout_marginTop="25dp"

        style="@style/txtView_title1"

        android:text="@string/email"
        android:textAlignment="viewStart"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.155"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <EditText
        android:id="@+id/textView9"
        android:layout_width="294dp"
        android:layout_height="51dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="63dp"
        android:background="@drawable/btn_white"
        android:enabled="true"
        android:lineSpacingExtra="8sp"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_sub_username8" />

    <TextView
        android:id="@+id/txt_sub_username8"

        style="@style/txtView_title1"

        android:layout_marginTop="20dp"
        android:text="@string/last_name"
        android:textAlignment="viewStart"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.155"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <EditText
        android:id="@+id/textView8"
        android:layout_width="294dp"
        android:layout_height="51dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="63dp"
        android:background="@drawable/btn_white"
        android:enabled="true"
        android:lineSpacingExtra="8sp"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_sub_username7" />

    <TextView
        android:id="@+id/txt_sub_username7"
        style="@style/txtView_title1"
        android:layout_marginTop="80dp"

        android:text="name"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.155"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_sub_forgot5" />

    <TextView
        android:id="@+id/txt_sub_forgot5"
        android:layout_width="206dp"
        android:layout_height="39dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="164dp"
        android:background="@null"
        android:ems="10"
        android:fontFamily="@font/raleway_extrabold"
        android:inputType="textPersonName"
        android:text="@string/app_name"
        android:textAlignment="viewStart"
        android:textColor="#E2000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>