<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FFFFFF"
    tools:context=".LandingPage">

    <Button
        android:id="@+id/btn_login"
        style="@style/btn_txt_black_background_white"

        android:text="@string/log_in"
        android:layout_marginStart="89dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="89dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_subtitle" />

    <Button
        android:id="@+id/btn_register"
        style="@style/btn_txt_white_background_grey"

        android:layout_marginStart="89dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="89dp"

        android:text="register"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <TextView
        android:id="@+id/txt_subtitle2"
        android:layout_width="212dp"
        android:layout_height="25dp"
        android:layout_marginTop="108dp"
        android:background="@null"
        android:ems="10"
        android:fontFamily="@font/raleway"
        android:inputType="textPersonName"
        android:lines="2"
        android:maxLines="10"
        android:text="@string/slogan2"
        android:textAlignment="center"
        android:textSize="24sp"
        android:focusableInTouchMode="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title" />

    <TextView
        android:id="@+id/txt_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:background="@null"
        android:ems="10"
        android:fontFamily="@font/raleway"
        android:inputType="textPersonName"
        android:focusableInTouchMode="false"

        android:text="@string/slogan1"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/txt_subtitle2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:ems="5"
        android:fontFamily="@font/raleway_extrabold"
        android:inputType="textPersonName"
        android:text="ratatouille"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="36sp"
        android:focusableInTouchMode="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.075" />

    <ImageView
        android:id="@+id/imageViews2"
        android:layout_width="602dp"
        android:layout_height="435dp"
        android:layout_marginTop="192dp"
        android:contentDescription="fotico"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        app:srcCompat="@drawable/img_landing" />

</androidx.constraintlayout.widget.ConstraintLayout>